--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+.modal { 
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
+    cursor: pointer;
+    transition: all 0.35s ease-in;
+    z-index: 1;
+  }
+
+  .is-visible{
+    visibility: visible;
+  }
+
+  input{
+    outline:none
+  }
+
+textarea{
+    outline: none;
+    display: block;
+    overflow: hidden;
+    resize: both;
+    min-height: 100px;
+    line-height: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 1px 6px;
+    text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.modal-content{
+    overflow: hidden;
 }
+
+select{
+    outline: none;
+    border:2px solid
+}
+
+.modal-dialog {
+    position: relative;
+    overflow: hidden;
+    cursor: default;
+  }
+
+  .modal-dialog > * {
+    padding: 1rem;
+  }
+   
+  .modal-header,
+  .modal-footer {
+    background: var(--lightgray);
+  }
+   
+  .modal-header {
+  }
+   
+  .modal-header .modal-close {
+    font-size: 1.5rem;
+  }
+   
+  .modal p + p {
+    margin-top: 1rem;
+  }
+
+  .modal-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .modal-footer button{
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: inherit;
+    background-color: #02ccba;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .modal-dialog h3{
+      text-align: center;
+  }
+
+
+  @media only screen and (max-width: 600px) {
+    .side_panel{
+      visibility: hidden;
+    }
+  }
